[gd_scene load_steps=3 format=2]

[ext_resource path="res://actors/GameModeController/GameModeController.gd" type="Script" id=1]
[ext_resource path="res://sounds/countdown.ogg" type="AudioStream" id=2]

[node name="GameModeController" type="Node2D"]
script = ExtResource( 1 )

[node name="NextGameModeTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="CountDownAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="timeout" from="NextGameModeTimer" to="." method="_on_Timer_timeout"]
